tools/kube-prometheus-stack/conf/alertmanager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  labels:
    name: alertmanager
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: alertmanager-basic-auth
spec:
  tls:
    - hosts:
        - alertmanager.kubernetes.jakubkubacki.com
      secretName: alertmanager-tls
  rules:
    - host: alertmanager.kubernetes.jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stack-alertmanager
                port:
                  number: 9093
